crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@truncated_module_member_prefix.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/truncated_module_member_prefix.v
---
lex: Code
prefix: "wi"
replacement: 18..20
in_decl_name: false
expectations:
  Keyword(ModuleMember)
